[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pytui"
author = "Perceptive Porcupines"
author-email = "email@example.com"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python=">=3.9"
requires=[
    "parse == 1.19.0",
    "requests == 2.25.1",
    "textual == 0.1.6",
    "toml == 0.10.2",
    "rich == 10.6.0",
    "typer == 0.3.2",
    "pyperclip == 1.8.2",
    "requests-cache == 0.7.1",
    "markdownify == 0.9.2"
]

[tool.flit.metadata.requires-extra]
test = [
    "flake8~=3.7",
    "flake8-annotations~=2.0",
    "flake8-bandit~=2.1",
    "flake8-docstrings~=1.5",
    "flake8-isort~=4.0",
    "isort~=5.9",
    "pytest >= 6.2.4",
    "pytest-cov >= 2.12.1",
    "pytest-datadir >= 1.3.1",
    "pytest-randomly >= 3.8.0",
]
dev = [
    "pre-commit >= 2.13.0",
]

[tool.flit.scripts]
pytui = "pytui.__main__:main"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "GNU Library or Lesser General Public License (LGPL)",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "MPL 2.0",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation license",
    "Python Software Foundation",
    "public domain",
    "zpl 2.1"
]
unauthorized_licenses = [
    "gpl v3"
]

[tool.liccheck.authorized_packages]
requests-cache = "0.7.1"
flake8-isort = "~=4.0"
