[tool.poetry]
name = "wtpython"
version = "0.1.0"
description = "A TUI that interactively helps you solve errors that might arise in your code."
authors = ["wtpython <wtpython@googlegroups.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/wtpython/"
repository = "https://github.com/what-the-python/wtpython"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"  # Poetry's dependency resolver requires me to put the <4.0 part for some reason
parse = "1.19.0"
requests = "2.26.0"
textual = "0.1.11"
toml = "0.10.2"
rich = "10.9.0"
pyperclip = "1.8.2"
requests-cache = "0.8.0"
markdownify = "0.9.4"

[tool.poetry.dev-dependencies]
flake8 = "~=3.7"
flake8-annotations = "~=2.9"
flake8-bandit = "~=2.1"
flake8-docstrings = "~=1.5"
flake8-isort = "~=4.0"
isort = "~=5.9"
pytest  = ">=6.2.4"
pytest-cov  = ">=2.12.1"
pytest-datadir  = ">=1.3.1"
pytest-randomly  = ">=3.8.0"
pre-commit  = ">=2.13.0"

# Install dev and test dependencies with the -e option of poetry install
[tool.poetry.extras]
test = [
    "flake8~=3.7",
    "flake8-annotations~=2.0",
    "flake8-bandit~=2.1",
    "flake8-docstrings~=1.5",
    "flake8-isort~=4.0",
    "isort~=5.9",
    "pytest >= 6.2.4",
    "pytest-cov >= 2.12.1",
    "pytest-datadir >= 1.3.1",
    "pytest-randomly >= 3.8.0",
]
dev = [
    "pre-commit >= 2.13.0",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/what-the-python/wtpython/issues"

[tool.poetry.scripts]
wtpython = 'wtpython.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "GNU Library or Lesser General Public License (LGPL)",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "MPL 2.0",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation license",
    "Python Software Foundation",
    "public domain",
    "zpl 2.1"
]
unauthorized_licenses = [
    "gpl v3"
]

[tool.liccheck.authorized_packages]
requests-cache = "0.8.0"
flake8-isort = "~=4.0"
